[gd_scene load_steps=6 format=3 uid="uid://bwwss4ccc255y"]

[ext_resource type="Script" uid="uid://d0asvnpnp4k8v" path="res://_Scripts/enemy/enemy.gd" id="1_0t2mr"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0t2mr"]
radius = 3.36182

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rx1v3"]
radius = 0.486865
height = 2.30707

[sub_resource type="CylinderMesh" id="CylinderMesh_0t2mr"]

[sub_resource type="SphereMesh" id="SphereMesh_0t2mr"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 3
script = ExtResource("1_0t2mr")

[node name="PreyDetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743826, 0)
collision_layer = 129
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="PreyDetectionArea"]
shape = SubResource("CylinderShape3D_0t2mr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.383751, 0)
shape = SubResource("CapsuleShape3D_rx1v3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_0t2mr")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Main" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Head" type="MeshInstance3D" parent="Main"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0092991, 1.36673, 0.0906049)
mesh = SubResource("SphereMesh_0t2mr")
skeleton = NodePath("../..")

[connection signal="body_entered" from="PreyDetectionArea" to="." method="_on_prey_detection_area_body_entered"]
[connection signal="body_exited" from="PreyDetectionArea" to="." method="_on_prey_detection_area_body_exited"]
